# zoho-desktop-widget

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  Makefile  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  constants.ts  globals.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keys/: update.key.pub
src-tauri/src/: auth.rs  lib.rs  main.rs  timer.rs  tray.rs  updater.rs  window_state.rs  ws.rs
src/components/: AsapList.tsx  CountGrid.tsx  EmptyTicketState.tsx  ErrorTicketState.tsx  LoadingState.tsx  LoginScreen.tsx  TicketCard.tsx  UpdateBanner.tsx  WaitingList.tsx  Widget.tsx  WidgetHeader.tsx
src/components/__tests__/: CountGrid.test.tsx  LoginScreen.test.tsx  TicketCard.test.tsx  UpdateBanner.test.tsx  Widget.test.tsx  WidgetHeader.test.tsx
src/hooks/: useAuth.ts  useTicketEvents.ts
src/hooks/__tests__/: useAuth.test.ts  useTicketEvents.test.ts
