[package]
name = "zoho-desktop-widget"
version = "0.1.0"
edition = "2021"

[lib]
name = "zoho_desktop_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
